Compiler/Compiler3/PARSER/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> PROGRAM
Rule 1     PROGRAM -> Z
Rule 2     Z -> CLASSDECLARATION Z
Rule 3     Z -> EMPTY
Rule 4     CLASSDECLARATION -> CLASS ID OPENAKOL A CLOSEAKOL
Rule 5     A -> FIELDDECLARATION A
Rule 6     A -> METHODDECLARATION A
Rule 7     A -> EMPTY
Rule 8     FIELDDECLARATION -> DECLARATORS ID SEMI
Rule 9     METHODDECLARATION -> DECLARATORS ID OPENPAR PARAMERERLIST CLOSEPAR OPENAKOL B RETURN EXPRESSION SEMI CLOSEAKOL
Rule 10    METHODDECLARATION -> DECLARATORS ID OPENPAR CLOSEPAR OPENAKOL B RETURN EXPRESSION SEMI CLOSEAKOL
Rule 11    METHODDECLARATION -> DECLARATORS ID OPENPAR PARAMERERLIST CLOSEPAR OPENAKOL B CLOSEAKOL
Rule 12    METHODDECLARATION -> DECLARATORS ID OPENPAR CLOSEPAR OPENAKOL B CLOSEAKOL
Rule 13    B -> STATEMENT B
Rule 14    B -> EMPTY
Rule 15    DECLARATORS -> C STATIC TYPE
Rule 16    DECLARATORS -> STATIC TYPE
Rule 17    DECLARATORS -> C TYPE
Rule 18    DECLARATORS -> TYPE
Rule 19    C -> PUBLIC
Rule 20    C -> PRIVATE
Rule 21    EMPTY -> <empty>
Rule 22    TYPE -> PRIMTYPE
Rule 23    TYPE -> CLASSTYPE
Rule 24    TYPE -> ARRTYPE
Rule 25    PRIMTYPE -> INT
Rule 26    PRIMTYPE -> BOOLEAN
Rule 27    PRIMTYPE -> STRING
Rule 28    PRIMTYPE -> DOUBLE
Rule 29    PRIMTYPE -> CHARACTER
Rule 30    PRIMTYPE -> FLOAT
Rule 31    PRIMTYPE -> VOID
Rule 32    CLASSTYPE -> ID
Rule 33    ARRTYPE -> INT OPENBRACKET CLOSEBRACKET
Rule 34    ARRTYPE -> CLASSTYPE OPENBRACKET CLOSEBRACKET
Rule 35    PARAMERERLIST -> TYPE ID D
Rule 36    D -> COMMA TYPE ID D
Rule 37    D -> EMPTY
Rule 38    ARGUMENTLIST -> EXPRESSION E
Rule 39    E -> COMMA EXPRESSION
Rule 40    E -> EMPTY
Rule 41    REFERENCE -> THIS G
Rule 42    REFERENCE -> ID G
Rule 43    G -> DOT ID G
Rule 44    G -> EMPTY
Rule 45    STATEMENT -> OPENAKOL H CLOSEAKOL
Rule 46    STATEMENT -> TYPE ID ASSIGN EXPRESSION SEMI
Rule 47    STATEMENT -> REFERENCE OPENBRACKET EXPRESSION CLOSEBRACKET ASSIGN EXPRESSION SEMI
Rule 48    STATEMENT -> REFERENCE ASSIGN EXPRESSION SEMI
Rule 49    STATEMENT -> REFERENCE OPENPAR CLOSEPAR SEMI
Rule 50    STATEMENT -> REFERENCE OPENPAR ARGUMENTLIST CLOSEPAR SEMI
Rule 51    STATEMENT -> IF OPENPAR EXPRESSION CLOSEPAR STATEMENT ELSE STATEMENT
Rule 52    STATEMENT -> IF OPENPAR EXPRESSION CLOSEPAR STATEMENT
Rule 53    STATEMENT -> FOR OPENPAR EXPRESSION CLOSEPAR STATEMENT
Rule 54    STATEMENT -> WHILE OPENPAR EXPRESSION CLOSEPAR STATEMENT
Rule 55    H -> STATEMENT H
Rule 56    H -> EMPTY
Rule 57    EXPRESSION -> TRUE
Rule 58    EXPRESSION -> FALSE
Rule 59    EXPRESSION -> NULL
Rule 60    EXPRESSION -> NEW ID OPENPAR CLOSEPAR
Rule 61    EXPRESSION -> NEW INT OPENBRACKET EXPRESSION CLOSEBRACKET
Rule 62    EXPRESSION -> NEW ID OPENBRACKET EXPRESSION CLOSEBRACKET
Rule 63    EXPRESSION -> OPENPAR EXPRESSION CLOSEPAR
Rule 64    EXPRESSION -> EXPRESSION OP EXPRESSION
Rule 65    EXPRESSION -> EXPRESSION OP EXPRESSION SEMI
Rule 66    EXPRESSION -> NUMBER
Rule 67    EXPRESSION -> REFERENCE OPENPAR ARGUMENTLIST CLOSEPAR
Rule 68    EXPRESSION -> REFERENCE OPENPAR CLOSEPAR
Rule 69    EXPRESSION -> REFERENCE OPENBRACKET EXPRESSION CLOSEBRACKET
Rule 70    EXPRESSION -> REFERENCE
Rule 71    EXPRESSION -> REFERENCE ASSIGN REFERENCE SEMI REFERENCE OP REFERENCE SEMI I
Rule 72    EXPRESSION -> REFERENCE ASSIGN NUMBER SEMI REFERENCE OP NUMBER SEMI I
Rule 73    EXPRESSION -> REFERENCE ASSIGN NUMBER SEMI REFERENCE OP REFERENCE SEMI I
Rule 74    OP -> LESSEQUAL
Rule 75    OP -> ASSIGN
Rule 76    OP -> EQUALS
Rule 77    OP -> GREATEREQUAL
Rule 78    OP -> GREATERTHAN
Rule 79    OP -> LESSTHAN
Rule 80    OP -> ADD
Rule 81    OP -> MINUS
Rule 82    OP -> MULT
Rule 83    OP -> NOTEQUAL
Rule 84    OP -> DIVIDE
Rule 85    OP -> PEQUAL
Rule 86    OP -> MEQUAL
Rule 87    OP -> PLUSPLUS
Rule 88    I -> REFERENCE OP
Rule 89    I -> REFERENCE OP NUMBER
Rule 90    I -> REFERENCE OP REFERENCE

Terminals, with rules where they appear

ADD                  : 80
ASSIGN               : 46 47 48 71 72 73 75
BOOLEAN              : 26
CHARACTER            : 29
CLASS                : 4
CLOSEAKOL            : 4 9 10 11 12 45
CLOSEBRACKET         : 33 34 47 61 62 69
CLOSEPAR             : 9 10 11 12 49 50 51 52 53 54 60 63 67 68
COMMA                : 36 39
DIVIDE               : 84
DOT                  : 43
DOUBLE               : 28
ELSE                 : 51
EQUALS               : 76
FALSE                : 58
FLOAT                : 30
FOR                  : 53
GREATEREQUAL         : 77
GREATERTHAN          : 78
ID                   : 4 8 9 10 11 12 32 35 36 42 43 46 60 62
IF                   : 51 52
INT                  : 25 33 61
LESSEQUAL            : 74
LESSTHAN             : 79
MEQUAL               : 86
MINUS                : 81
MULT                 : 82
NEW                  : 60 61 62
NOTEQUAL             : 83
NULL                 : 59
NUMBER               : 66 72 72 73 89
OPENAKOL             : 4 9 10 11 12 45
OPENBRACKET          : 33 34 47 61 62 69
OPENPAR              : 9 10 11 12 49 50 51 52 53 54 60 63 67 68
PEQUAL               : 85
PLUSPLUS             : 87
PRIVATE              : 20
PUBLIC               : 19
RETURN               : 9 10
SEMI                 : 8 9 10 46 47 48 49 50 65 71 71 72 72 73 73
STATIC               : 15 16
STRING               : 27
THIS                 : 41
TRUE                 : 57
VOID                 : 31
WHILE                : 54
error                : 

Nonterminals, with rules where they appear

A                    : 4 5 6
ARGUMENTLIST         : 50 67
ARRTYPE              : 24
B                    : 9 10 11 12 13
C                    : 15 17
CLASSDECLARATION     : 2
CLASSTYPE            : 23 34
D                    : 35 36
DECLARATORS          : 8 9 10 11 12
E                    : 38
EMPTY                : 3 7 14 37 40 44 56
EXPRESSION           : 9 10 38 39 46 47 47 48 51 52 53 54 61 62 63 64 64 65 65 69
FIELDDECLARATION     : 5
G                    : 41 42 43
H                    : 45 55
I                    : 71 72 73
METHODDECLARATION    : 6
OP                   : 64 65 71 72 73 88 89 90
PARAMERERLIST        : 9 11
PRIMTYPE             : 22
PROGRAM              : 0
REFERENCE            : 47 48 49 50 67 68 69 70 71 71 71 71 72 72 73 73 73 88 89 90 90
STATEMENT            : 13 51 51 52 53 54 55
TYPE                 : 15 16 17 18 35 36 46
Z                    : 1 2

Parsing method: LALR

state 0

    (0) S' -> . PROGRAM
    (1) PROGRAM -> . Z
    (2) Z -> . CLASSDECLARATION Z
    (3) Z -> . EMPTY
    (4) CLASSDECLARATION -> . CLASS ID OPENAKOL A CLOSEAKOL
    (21) EMPTY -> .

    CLASS           shift and go to state 5
    $end            reduce using rule 21 (EMPTY -> .)

    PROGRAM                        shift and go to state 1
    Z                              shift and go to state 2
    CLASSDECLARATION               shift and go to state 3
    EMPTY                          shift and go to state 4

state 1

    (0) S' -> PROGRAM .



state 2

    (1) PROGRAM -> Z .

    $end            reduce using rule 1 (PROGRAM -> Z .)


state 3

    (2) Z -> CLASSDECLARATION . Z
    (2) Z -> . CLASSDECLARATION Z
    (3) Z -> . EMPTY
    (4) CLASSDECLARATION -> . CLASS ID OPENAKOL A CLOSEAKOL
    (21) EMPTY -> .

    CLASS           shift and go to state 5
    $end            reduce using rule 21 (EMPTY -> .)

    CLASSDECLARATION               shift and go to state 3
    Z                              shift and go to state 6
    EMPTY                          shift and go to state 4

state 4

    (3) Z -> EMPTY .

    $end            reduce using rule 3 (Z -> EMPTY .)


state 5

    (4) CLASSDECLARATION -> CLASS . ID OPENAKOL A CLOSEAKOL

    ID              shift and go to state 7


state 6

    (2) Z -> CLASSDECLARATION Z .

    $end            reduce using rule 2 (Z -> CLASSDECLARATION Z .)


state 7

    (4) CLASSDECLARATION -> CLASS ID . OPENAKOL A CLOSEAKOL

    OPENAKOL        shift and go to state 8


state 8

    (4) CLASSDECLARATION -> CLASS ID OPENAKOL . A CLOSEAKOL
    (5) A -> . FIELDDECLARATION A
    (6) A -> . METHODDECLARATION A
    (7) A -> . EMPTY
    (8) FIELDDECLARATION -> . DECLARATORS ID SEMI
    (9) METHODDECLARATION -> . DECLARATORS ID OPENPAR PARAMERERLIST CLOSEPAR OPENAKOL B RETURN EXPRESSION SEMI CLOSEAKOL
    (10) METHODDECLARATION -> . DECLARATORS ID OPENPAR CLOSEPAR OPENAKOL B RETURN EXPRESSION SEMI CLOSEAKOL
    (11) METHODDECLARATION -> . DECLARATORS ID OPENPAR PARAMERERLIST CLOSEPAR OPENAKOL B CLOSEAKOL
    (12) METHODDECLARATION -> . DECLARATORS ID OPENPAR CLOSEPAR OPENAKOL B CLOSEAKOL
    (21) EMPTY -> .
    (15) DECLARATORS -> . C STATIC TYPE
    (16) DECLARATORS -> . STATIC TYPE
    (17) DECLARATORS -> . C TYPE
    (18) DECLARATORS -> . TYPE
    (19) C -> . PUBLIC
    (20) C -> . PRIVATE
    (22) TYPE -> . PRIMTYPE
    (23) TYPE -> . CLASSTYPE
    (24) TYPE -> . ARRTYPE
    (25) PRIMTYPE -> . INT
    (26) PRIMTYPE -> . BOOLEAN
    (27) PRIMTYPE -> . STRING
    (28) PRIMTYPE -> . DOUBLE
    (29) PRIMTYPE -> . CHARACTER
    (30) PRIMTYPE -> . FLOAT
    (31) PRIMTYPE -> . VOID
    (32) CLASSTYPE -> . ID
    (33) ARRTYPE -> . INT OPENBRACKET CLOSEBRACKET
    (34) ARRTYPE -> . CLASSTYPE OPENBRACKET CLOSEBRACKET

    CLOSEAKOL       reduce using rule 21 (EMPTY -> .)
    STATIC          shift and go to state 16
    PUBLIC          shift and go to state 18
    PRIVATE         shift and go to state 19
    INT             shift and go to state 23
    BOOLEAN         shift and go to state 24
    STRING          shift and go to state 25
    DOUBLE          shift and go to state 26
    CHARACTER       shift and go to state 27
    FLOAT           shift and go to state 28
    VOID            shift and go to state 29
    ID              shift and go to state 9

    A                              shift and go to state 10
    FIELDDECLARATION               shift and go to state 11
    METHODDECLARATION              shift and go to state 12
    EMPTY                          shift and go to state 13
    DECLARATORS                    shift and go to state 14
    C                              shift and go to state 15
    TYPE                           shift and go to state 17
    PRIMTYPE                       shift and go to state 20
    CLASSTYPE                      shift and go to state 21
    ARRTYPE                        shift and go to state 22

state 9

    (32) CLASSTYPE -> ID .

    OPENBRACKET     reduce using rule 32 (CLASSTYPE -> ID .)
    ID              reduce using rule 32 (CLASSTYPE -> ID .)


state 10

    (4) CLASSDECLARATION -> CLASS ID OPENAKOL A . CLOSEAKOL

    CLOSEAKOL       shift and go to state 30


state 11

    (5) A -> FIELDDECLARATION . A
    (5) A -> . FIELDDECLARATION A
    (6) A -> . METHODDECLARATION A
    (7) A -> . EMPTY
    (8) FIELDDECLARATION -> . DECLARATORS ID SEMI
    (9) METHODDECLARATION -> . DECLARATORS ID OPENPAR PARAMERERLIST CLOSEPAR OPENAKOL B RETURN EXPRESSION SEMI CLOSEAKOL
    (10) METHODDECLARATION -> . DECLARATORS ID OPENPAR CLOSEPAR OPENAKOL B RETURN EXPRESSION SEMI CLOSEAKOL
    (11) METHODDECLARATION -> . DECLARATORS ID OPENPAR PARAMERERLIST CLOSEPAR OPENAKOL B CLOSEAKOL
    (12) METHODDECLARATION -> . DECLARATORS ID OPENPAR CLOSEPAR OPENAKOL B CLOSEAKOL
    (21) EMPTY -> .
    (15) DECLARATORS -> . C STATIC TYPE
    (16) DECLARATORS -> . STATIC TYPE
    (17) DECLARATORS -> . C TYPE
    (18) DECLARATORS -> . TYPE
    (19) C -> . PUBLIC
    (20) C -> . PRIVATE
    (22) TYPE -> . PRIMTYPE
    (23) TYPE -> . CLASSTYPE
    (24) TYPE -> . ARRTYPE
    (25) PRIMTYPE -> . INT
    (26) PRIMTYPE -> . BOOLEAN
    (27) PRIMTYPE -> . STRING
    (28) PRIMTYPE -> . DOUBLE
    (29) PRIMTYPE -> . CHARACTER
    (30) PRIMTYPE -> . FLOAT
    (31) PRIMTYPE -> . VOID
    (32) CLASSTYPE -> . ID
    (33) ARRTYPE -> . INT OPENBRACKET CLOSEBRACKET
    (34) ARRTYPE -> . CLASSTYPE OPENBRACKET CLOSEBRACKET

    CLOSEAKOL       reduce using rule 21 (EMPTY -> .)
    STATIC          shift and go to state 16
    PUBLIC          shift and go to state 18
    PRIVATE         shift and go to state 19
    INT             shift and go to state 23
    BOOLEAN         shift and go to state 24
    STRING          shift and go to state 25
    DOUBLE          shift and go to state 26
    CHARACTER       shift and go to state 27
    FLOAT           shift and go to state 28
    VOID            shift and go to state 29
    ID              shift and go to state 9

    FIELDDECLARATION               shift and go to state 11
    A                              shift and go to state 31
    METHODDECLARATION              shift and go to state 12
    EMPTY                          shift and go to state 13
    DECLARATORS                    shift and go to state 14
    C                              shift and go to state 15
    TYPE                           shift and go to state 17
    PRIMTYPE                       shift and go to state 20
    CLASSTYPE                      shift and go to state 21
    ARRTYPE                        shift and go to state 22

state 12

    (6) A -> METHODDECLARATION . A
    (5) A -> . FIELDDECLARATION A
    (6) A -> . METHODDECLARATION A
    (7) A -> . EMPTY
    (8) FIELDDECLARATION -> . DECLARATORS ID SEMI
    (9) METHODDECLARATION -> . DECLARATORS ID OPENPAR PARAMERERLIST CLOSEPAR OPENAKOL B RETURN EXPRESSION SEMI CLOSEAKOL
    (10) METHODDECLARATION -> . DECLARATORS ID OPENPAR CLOSEPAR OPENAKOL B RETURN EXPRESSION SEMI CLOSEAKOL
    (11) METHODDECLARATION -> . DECLARATORS ID OPENPAR PARAMERERLIST CLOSEPAR OPENAKOL B CLOSEAKOL
    (12) METHODDECLARATION -> . DECLARATORS ID OPENPAR CLOSEPAR OPENAKOL B CLOSEAKOL
    (21) EMPTY -> .
    (15) DECLARATORS -> . C STATIC TYPE
    (16) DECLARATORS -> . STATIC TYPE
    (17) DECLARATORS -> . C TYPE
    (18) DECLARATORS -> . TYPE
    (19) C -> . PUBLIC
    (20) C -> . PRIVATE
    (22) TYPE -> . PRIMTYPE
    (23) TYPE -> . CLASSTYPE
    (24) TYPE -> . ARRTYPE
    (25) PRIMTYPE -> . INT
    (26) PRIMTYPE -> . BOOLEAN
    (27) PRIMTYPE -> . STRING
    (28) PRIMTYPE -> . DOUBLE
    (29) PRIMTYPE -> . CHARACTER
    (30) PRIMTYPE -> . FLOAT
    (31) PRIMTYPE -> . VOID
    (32) CLASSTYPE -> . ID
    (33) ARRTYPE -> . INT OPENBRACKET CLOSEBRACKET
    (34) ARRTYPE -> . CLASSTYPE OPENBRACKET CLOSEBRACKET

    CLOSEAKOL       reduce using rule 21 (EMPTY -> .)
    STATIC          shift and go to state 16
    PUBLIC          shift and go to state 18
    PRIVATE         shift and go to state 19
    INT             shift and go to state 23
    BOOLEAN         shift and go to state 24
    STRING          shift and go to state 25
    DOUBLE          shift and go to state 26
    CHARACTER       shift and go to state 27
    FLOAT           shift and go to state 28
    VOID            shift and go to state 29
    ID              shift and go to state 9

    METHODDECLARATION              shift and go to state 12
    A                              shift and go to state 32
    FIELDDECLARATION               shift and go to state 11
    EMPTY                          shift and go to state 13
    DECLARATORS                    shift and go to state 14
    C                              shift and go to state 15
    TYPE                           shift and go to state 17
    PRIMTYPE                       shift and go to state 20
    CLASSTYPE                      shift and go to state 21
    ARRTYPE                        shift and go to state 22

state 13

    (7) A -> EMPTY .

    CLOSEAKOL       reduce using rule 7 (A -> EMPTY .)


state 14

    (8) FIELDDECLARATION -> DECLARATORS . ID SEMI
    (9) METHODDECLARATION -> DECLARATORS . ID OPENPAR PARAMERERLIST CLOSEPAR OPENAKOL B RETURN EXPRESSION SEMI CLOSEAKOL
    (10) METHODDECLARATION -> DECLARATORS . ID OPENPAR CLOSEPAR OPENAKOL B RETURN EXPRESSION SEMI CLOSEAKOL
    (11) METHODDECLARATION -> DECLARATORS . ID OPENPAR PARAMERERLIST CLOSEPAR OPENAKOL B CLOSEAKOL
    (12) METHODDECLARATION -> DECLARATORS . ID OPENPAR CLOSEPAR OPENAKOL B CLOSEAKOL

    ID              shift and go to state 33


state 15

    (15) DECLARATORS -> C . STATIC TYPE
    (17) DECLARATORS -> C . TYPE
    (22) TYPE -> . PRIMTYPE
    (23) TYPE -> . CLASSTYPE
    (24) TYPE -> . ARRTYPE
    (25) PRIMTYPE -> . INT
    (26) PRIMTYPE -> . BOOLEAN
    (27) PRIMTYPE -> . STRING
    (28) PRIMTYPE -> . DOUBLE
    (29) PRIMTYPE -> . CHARACTER
    (30) PRIMTYPE -> . FLOAT
    (31) PRIMTYPE -> . VOID
    (32) CLASSTYPE -> . ID
    (33) ARRTYPE -> . INT OPENBRACKET CLOSEBRACKET
    (34) ARRTYPE -> . CLASSTYPE OPENBRACKET CLOSEBRACKET

    STATIC          shift and go to state 34
    INT             shift and go to state 23
    BOOLEAN         shift and go to state 24
    STRING          shift and go to state 25
    DOUBLE          shift and go to state 26
    CHARACTER       shift and go to state 27
    FLOAT           shift and go to state 28
    VOID            shift and go to state 29
    ID              shift and go to state 9

    TYPE                           shift and go to state 35
    PRIMTYPE                       shift and go to state 20
    CLASSTYPE                      shift and go to state 21
    ARRTYPE                        shift and go to state 22

state 16

    (16) DECLARATORS -> STATIC . TYPE
    (22) TYPE -> . PRIMTYPE
    (23) TYPE -> . CLASSTYPE
    (24) TYPE -> . ARRTYPE
    (25) PRIMTYPE -> . INT
    (26) PRIMTYPE -> . BOOLEAN
    (27) PRIMTYPE -> . STRING
    (28) PRIMTYPE -> . DOUBLE
    (29) PRIMTYPE -> . CHARACTER
    (30) PRIMTYPE -> . FLOAT
    (31) PRIMTYPE -> . VOID
    (32) CLASSTYPE -> . ID
    (33) ARRTYPE -> . INT OPENBRACKET CLOSEBRACKET
    (34) ARRTYPE -> . CLASSTYPE OPENBRACKET CLOSEBRACKET

    INT             shift and go to state 23
    BOOLEAN         shift and go to state 24
    STRING          shift and go to state 25
    DOUBLE          shift and go to state 26
    CHARACTER       shift and go to state 27
    FLOAT           shift and go to state 28
    VOID            shift and go to state 29
    ID              shift and go to state 9

    TYPE                           shift and go to state 36
    PRIMTYPE                       shift and go to state 20
    CLASSTYPE                      shift and go to state 21
    ARRTYPE                        shift and go to state 22

state 17

    (18) DECLARATORS -> TYPE .

    ID              reduce using rule 18 (DECLARATORS -> TYPE .)


state 18

    (19) C -> PUBLIC .

    STATIC          reduce using rule 19 (C -> PUBLIC .)
    INT             reduce using rule 19 (C -> PUBLIC .)
    BOOLEAN         reduce using rule 19 (C -> PUBLIC .)
    STRING          reduce using rule 19 (C -> PUBLIC .)
    DOUBLE          reduce using rule 19 (C -> PUBLIC .)
    CHARACTER       reduce using rule 19 (C -> PUBLIC .)
    FLOAT           reduce using rule 19 (C -> PUBLIC .)
    VOID            reduce using rule 19 (C -> PUBLIC .)
    ID              reduce using rule 19 (C -> PUBLIC .)


state 19

    (20) C -> PRIVATE .

    STATIC          reduce using rule 20 (C -> PRIVATE .)
    INT             reduce using rule 20 (C -> PRIVATE .)
    BOOLEAN         reduce using rule 20 (C -> PRIVATE .)
    STRING          reduce using rule 20 (C -> PRIVATE .)
    DOUBLE          reduce using rule 20 (C -> PRIVATE .)
    CHARACTER       reduce using rule 20 (C -> PRIVATE .)
    FLOAT           reduce using rule 20 (C -> PRIVATE .)
    VOID            reduce using rule 20 (C -> PRIVATE .)
    ID              reduce using rule 20 (C -> PRIVATE .)


state 20

    (22) TYPE -> PRIMTYPE .

    ID              reduce using rule 22 (TYPE -> PRIMTYPE .)


state 21

    (23) TYPE -> CLASSTYPE .
    (34) ARRTYPE -> CLASSTYPE . OPENBRACKET CLOSEBRACKET

    ID              reduce using rule 23 (TYPE -> CLASSTYPE .)
    OPENBRACKET     shift and go to state 37


state 22

    (24) TYPE -> ARRTYPE .

    ID              reduce using rule 24 (TYPE -> ARRTYPE .)


state 23

    (25) PRIMTYPE -> INT .
    (33) ARRTYPE -> INT . OPENBRACKET CLOSEBRACKET

    ID              reduce using rule 25 (PRIMTYPE -> INT .)
    OPENBRACKET     shift and go to state 38


state 24

    (26) PRIMTYPE -> BOOLEAN .

    ID              reduce using rule 26 (PRIMTYPE -> BOOLEAN .)


state 25

    (27) PRIMTYPE -> STRING .

    ID              reduce using rule 27 (PRIMTYPE -> STRING .)


state 26

    (28) PRIMTYPE -> DOUBLE .

    ID              reduce using rule 28 (PRIMTYPE -> DOUBLE .)


state 27

    (29) PRIMTYPE -> CHARACTER .

    ID              reduce using rule 29 (PRIMTYPE -> CHARACTER .)


state 28

    (30) PRIMTYPE -> FLOAT .

    ID              reduce using rule 30 (PRIMTYPE -> FLOAT .)


state 29

    (31) PRIMTYPE -> VOID .

    ID              reduce using rule 31 (PRIMTYPE -> VOID .)


state 30

    (4) CLASSDECLARATION -> CLASS ID OPENAKOL A CLOSEAKOL .
